--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 CMAKE_MINIMUM_REQUIRED( VERSION 3.10)
 
 # name of the project
-PROJECT(pointCloudFilters)
+PROJECT(pclExtractedStuff)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
@@ -17,7 +17,7 @@ SET(CMAKE_CXX_STANDARD_REQUIRED True)
 FILE(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 
 # Where to find .h/.hpp files
-INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/include" "${EIGEN3_INCLUDE_DIR}" "${FLANN_INCLUDE_DIR}")
+INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME}" "${EIGEN3_INCLUDE_DIR}" "${FLANN_INCLUDE_DIR}")
 
 # Executable target name and srouce
 ADD_EXECUTABLE (${PROJECT_NAME} ${SOURCES})
