--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -26,17 +26,22 @@ jobs:
     - name: Configure CMake flann
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: mkdir -p ./thirdparty/flann/build && cmake -B ${{github.workspace}}/thirdparty/flann/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: |
+       mkdir -p ./thirdparty/flann/build
+       cd ./thirdparty/flann/build
+       cmake -S .. -B . -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
       
     - name: Build flann
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/flann/build --config ${{env.BUILD_TYPE}} --target all
+      run: cmake --build ${{github.workspace}}/flann/build --config ${{env.BUILD_TYPE}} --target flann
       
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: |
+       mkdir -p build && cd build
+       cmake -S .. -B . -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build flann
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target all
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target pclExtractedStuff
