--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
        mkdir -p ./thirdparty/flann/build
        cd ./thirdparty/flann/build
-       cmake -S .. -B . -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+       cmake -S . -B . -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
       
     - name: Build flann
       # Build your program with the given configuration
@@ -40,7 +40,7 @@ jobs:
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: |
        mkdir -p build && cd build
-       cmake -S .. -B . -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+       cmake -S . -B . -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build flann
       # Build your program with the given configuration
