--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,19 +29,23 @@ jobs:
       run: |
        mkdir -p ./thirdparty/flann/build
        cd ./thirdparty/flann/build
-       cmake -S . -B . -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+       cmake -S .. -B . -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
       
     - name: Build flann
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/flann/build --config ${{env.BUILD_TYPE}} --target flann
+      run: |
+       cd ./thirdpart/flann/build
+       cmake --build . --config ${{env.BUILD_TYPE}} --target flann
       
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: |
        mkdir -p build && cd build
-       cmake -S . -B . -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+       cmake -S .. -B . -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build flann
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target pclExtractedStuff
+      run: |
+       cd ./build
+       cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target pclExtractedStuff
