--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -23,19 +23,10 @@ jobs:
       with:
         submodules: recursive
 
-    - name: Build flann
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: |
-       mkdir -p ./thirdparty/flann/build
-       cd ./thirdparty/flann/build
-       cmake -S .. -B . -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-       cmake --build . --config ${{env.BUILD_TYPE}} --target flann
-      
     - name: Build Project
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: |
        mkdir -p ./build && cd build
        cmake -S .. -B . -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-       cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target pclExtractedStuff
+       cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target all
