--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -28,5 +28,5 @@ jobs:
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: |
        mkdir -p ./build && cd build
-       cmake -H .. -B . -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+       cmake -S .. -B . -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
        cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target all
