--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,4 +29,4 @@ jobs:
       run: |
        mkdir -p ./build && cd build
        cmake -S .. -B . -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-       cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target all
+       cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target pointCloudFilters_shared.so
