--- a/example/DownSampling/CMakeLists.txt
+++ b/example/DownSampling/CMakeLists.txt
@@ -13,4 +13,5 @@ add_executable(
 
 # Link dependencies
 target_link_libraries (${PROJECT_NAME} PRIVATE
-pointCloudFilters_shared)
+	pointCloudFilters_shared
+)
