--- a/example/ipc/CMakeLists.txt
+++ b/example/ipc/CMakeLists.txt
@@ -7,4 +7,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
 add_executable(${PROJECT_NAME} ${SOURCES})
 
 # Link dependencies
-target_link_libraries(${PROJECT_NAME} PRIVATE pointCloudFilters_shared)
+target_link_libraries(${PROJECT_NAME} PUBLIC pointCloudFilters_shared)
